--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
 # theme                  : "minimal-mistakes-jekyll"
-# remote_theme           : "mmistakes/minimal-mistakes"
+remote_theme           : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "mint" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
@@ -117,7 +117,7 @@ author:
   avatar           : "/assets/images/bio-photo.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an undergraduate researcher working on learning-enhanced autonomous systems, combining structured sensing and estimation with real-world robot learning."
   location         : "Berkeley, CA, USA"
-  email            : "chenhaoyu@westlake.edu.cn"
+  # email            : "chenhaoyu@westlake.edu.cn"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
