--- a/_config.yml
+++ b/_config.yml
@@ -117,11 +117,11 @@ author:
   avatar           : "/assets/images/bio-photo.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an undergraduate researcher working on learning-enhanced autonomous systems, combining structured sensing and estimation with real-world robot learning."
   location         : "Berkeley, CA, USA"
-  # email            : "chenhaoyu@westlake.edu.cn"
+  email            : "chenhaoyu@westlake.edu.cn"
   links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      url: "chenhaoyu@westlake.edu.cn"
+    # - label: "Email"
+    #   icon: "fas fa-fw fa-envelope-square"
+    #   url: "chenhaoyu@westlake.edu.cn"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://haoyuchen37.github.io"
