--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 # Review documentation to determine if you should use `theme` or `remote_theme`
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
-# theme                  : "minimal-mistakes-jekyll"
+theme                  : "minimal-mistakes-jekyll"
 remote_theme           : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "mint" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
@@ -114,7 +114,7 @@ analytics:
 # Site Author
 author:
   name             : "Haoyu Chen"
-  avatar           : "/assets/images/bio-photo.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/BioPhoto.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an undergraduate researcher working on learning-enhanced autonomous systems, combining structured sensing and estimation with real-world robot learning."
   location         : "Berkeley, CA, USA"
   email            : "chenhaoyu@westlake.edu.cn"
