--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ subtitle                 : # site tagline that appears below site title in masth
 name                     : "Haoyu Chen"
 description              : "I am an undergraduate researcher working on learning-enhanced autonomous systems, combining structured sensing and estimation with real-world robot learning."
 url                      : "https://HaoyuChen37.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+baseurl                  : '' # the subpath of your site, e.g. "/blog"
 repository               : "HaoyuChen37/HaoyuChen37.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "/assets/images/fallback.jpg" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "/assets/images/88*88.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
